--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
 	"description": "Vue 3 UI library built with Vite and Storybook",
 	"scripts": {
 		"dev": "vite",
-		"build": "pnpm run type-check && pnpm run lint && vite optimize --force && vite build --mode production && node scripts/postbuild.cjs",
+		"build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production && node scripts/postbuild.cjs",
 		"preview": "vite preview",
 		"test": "vitest --run --update",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit",
 		"lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
 		"format": "prettier --write src/",
-		"patch": "pnpm version --no-git-tag-version patch",
-		"minor": "pnpm version --no-git-tag-version minor",
-		"major": "pnpm version --no-git-tag-version major",
-		"release": "pnpm run build && pnpm publish --access public",
-		"storybook": "storybook dev -p 6006",
+		"patch": "npm version --no-git-tag-version patch",
+		"minor": "npm version --no-git-tag-version minor",
+		"major": "npm version --no-git-tag-version major",
+		"release": "npm run build && npm publish --access public",
+		"storybook": "storybook dev -p 6006 --no-open",
 		"build-storybook": "storybook build",
 		"chromatic": "npx chromatic"
 	},
@@ -52,6 +52,7 @@
 		"@storybook/addon-themes": "^8.0.0-rc.1",
 		"@storybook/blocks": "8.0.0-rc.1",
 		"@storybook/test": "8.0.0-rc.1",
+		"@storybook/theming": "^8.0.0-rc.1",
 		"@storybook/vue3": "8.0.0-rc.1",
 		"@storybook/vue3-vite": "8.0.0-rc.1",
 		"@tsconfig/node18": "^18.2.2",
@@ -64,6 +65,7 @@
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.5.1",
 		"autoprefixer": "^10.4.18",
+		"chromatic": "^11.0.0",
 		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.1.3",
@@ -72,6 +74,7 @@
 		"gh-pages": "^6.1.1",
 		"jsdom": "^24.0.0",
 		"postcss": "^8.4.35",
+		"postcss-nesting": "^12.0.4",
 		"prettier": "^3.2.4",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"react": "^18.2.0",
@@ -82,7 +85,9 @@
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.12",
+		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-dts": "^3.7.2",
+		"vite-svg-loader": "^5.1.0",
 		"vitest": "^1.2.1",
 		"vue-tsc": "^2.0.3"
 	},
