--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,16 +10,9 @@
 		"moduleResolution": "Bundler",
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"],
-		},
+			"@/*": ["./src/*"]
+		}
 	},
-	"include": [
-		"env.d.ts",
-		"src/**/*.ts",
-		"src/**/*.vue",
-		"vite.config.*",
-		"vitest.config.*",
-		"tailwindcss.config.*",
-	],
-	"exclude": ["node_modules", "dist", "docs"],
+	"include": ["env.d.ts", "src/**/*.ts", "src/**/*.vue", "*.config.*"],
+	"exclude": ["node_modules", "dist", "docs"]
 }
