--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	"devDependencies": {
 		"@chromatic-com/storybook": "^1.2.2",
 		"@rushstack/eslint-patch": "^1.7.1",
+		"@storybook/addon-coverage": "^1.0.1",
 		"@storybook/addon-essentials": "8.0.0-rc.1",
 		"@storybook/addon-interactions": "8.0.0-rc.1",
 		"@storybook/addon-links": "8.0.0-rc.1",
