--- a/package.json
+++ b/package.json
@@ -58,15 +58,16 @@
 		"@rushstack/eslint-patch": "^1.7.1",
 		"@storybook/addon-coverage": "^1.0.1",
 		"@storybook/addon-docs": "^8.0.0-rc.2",
-		"@storybook/addon-essentials": "8.0.0-rc.1",
-		"@storybook/addon-interactions": "8.0.0-rc.1",
-		"@storybook/addon-links": "8.0.0-rc.1",
-		"@storybook/addon-themes": "^8.0.0-rc.1",
-		"@storybook/blocks": "8.0.0-rc.1",
-		"@storybook/test": "8.0.0-rc.1",
-		"@storybook/theming": "^8.0.0-rc.1",
-		"@storybook/vue3": "8.0.0-rc.1",
-		"@storybook/vue3-vite": "8.0.0-rc.1",
+		"@storybook/addon-essentials": "8.0.0-rc.2",
+		"@storybook/addon-interactions": "8.0.0-rc.2",
+		"@storybook/addon-links": "8.0.0-rc.2",
+		"@storybook/addon-mdx-gfm": "^8.0.0-rc.2",
+		"@storybook/addon-themes": "^8.0.0-rc.2",
+		"@storybook/blocks": "8.0.0-rc.2",
+		"@storybook/test": "8.0.0-rc.2",
+		"@storybook/theming": "^8.0.0-rc.2",
+		"@storybook/vue3": "8.0.0-rc.2",
+		"@storybook/vue3-vite": "8.0.0-rc.2",
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^20.11.6",
@@ -93,7 +94,7 @@
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
 		"sass": "^1.70.0",
-		"storybook": "8.0.0-rc.1",
+		"storybook": "8.0.0-rc.2",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
 		"vite": "^5.1.5",
