--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main, dev]
 
 jobs:
-  build-and-deploy:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
