--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"release": "npm run build && npm publish --access public",
 		"storybook": "storybook dev -p 6006 --no-open",
 		"build-storybook": "storybook build -o static",
-		"chromatic": "npx chromatic"
+		"chromatic": "npx chromatic --exit-zero-on-changes"
 	},
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com"
