--- a/package.json
+++ b/package.json
@@ -1,111 +1,112 @@
 {
-	"name": "@mrksbnc/bamboo",
-	"version": "0.0.1-test.1",
-	"description": "Vue 3 UI library built with Vite and Storybook",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production && npx tailwindcss -o dist/index.css --minify",
-		"preview": "vite preview",
-		"test": "vitest --run --update",
-		"build-only": "vite build",
-		"type-check": "vue-tsc --noEmit",
-		"lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
-		"format": "prettier --write src/",
-		"patch": "npm version --no-git-tag-version patch",
-		"minor": "npm version --no-git-tag-version minor",
-		"major": "npm version --no-git-tag-version major",
-		"release": "npm run build && npm publish --access public",
-		"storybook": "storybook dev -p 6006 --no-open",
-		"build-storybook": "storybook build -o static",
-		"chromatic": "npx chromatic --exit-zero-on-changes"
-	},
-	"homepage": "http://mrksbnc.github.io/bamboo",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/mrksbnc/bamboo.git"
-	},
-	"bugs": {
-		"url": "https://github.com/mrksbnc/bamboo/issues"
-	},
-	"files": [
-		"dist/**/*"
-	],
-	"engines": {
-		"node": ">=20.9.0",
-		"npm": ">=10.1.0"
-	},
-	"publishConfig": {
-		"tag": "latest",
-		"access": "public",
-		"registry": "https://registry.npmjs.org/"
-	},
-	"main": "./dist/index.cjs.js",
-	"module": "./dist/index.es.js",
-	"types": "./dist/src/index.d.ts",
-	"exports": {
-		".": {
-			"import": "./dist/index.es.js",
-			"require": "./dist/index.umd.js"
-		},
-		"./index.css": {
-			"import": "./dist/main.css",
-			"require": "./dist/main.css"
-		}
-	},
-	"dependencies": {
-		"vue": "^3.4.21"
-	},
-	"devDependencies": {
-		"@chromatic-com/storybook": "^1.2.18",
-		"@rushstack/eslint-patch": "^1.7.1",
-		"@storybook/addon-coverage": "^1.0.1",
-		"@storybook/addon-docs": "^8.0.0",
-		"@storybook/addon-essentials": "^8.0.0",
-		"@storybook/addon-interactions": "^8.0.0",
-		"@storybook/addon-links": "^8.0.0",
-		"@storybook/addon-themes": "^8.0.0",
-		"@storybook/blocks": "^8.0.0",
-		"@storybook/test": "^8.0.0",
-		"@storybook/theming": "^8.0.0",
-		"@storybook/vue3": "^8.0.0",
-		"@storybook/vue3-vite": "^8.0.0",
-		"@tsconfig/node18": "^18.2.2",
-		"@types/jsdom": "^21.1.6",
-		"@types/node": "^20.11.6",
-		"@vitejs/plugin-vue": "^5.0.3",
-		"@vitest/coverage-v8": "^1.3.1",
-		"@vue/eslint-config-prettier": "^9.0.0",
-		"@vue/eslint-config-typescript": "^12.0.0",
-		"@vue/test-utils": "^2.4.1",
-		"@vue/tsconfig": "^0.5.1",
-		"autoprefixer": "^10.4.18",
-		"chromatic": "^11.0.0",
-		"eslint": "^8.55.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-storybook": "^0.8.0",
-		"eslint-plugin-vue": "^9.20.1",
-		"gh-pages": "^6.1.1",
-		"jsdom": "^24.0.0",
-		"postcss": "^8.4.35",
-		"postcss-nesting": "^12.0.4",
-		"prettier": "^3.2.5",
-		"prettier-plugin-organize-imports": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.5.12",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"remark-gfm": "^4.0.0",
-		"sass": "^1.70.0",
-		"storybook": "^8.0.0",
-		"tailwindcss": "^3.4.1",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.3.3",
-		"vite": "^5.1.5",
-		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-dts": "^3.7.2",
-		"vite-svg-loader": "^5.1.0",
-		"vitest": "^1.2.1",
-		"vue-tsc": "^2.0.3"
-	}
+  "name": "@mrksbnc/bamboo",
+  "version": "0.0.1-test.1",
+  "description": "Vue 3 UI library built with Vite and Storybook",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production && npx tailwindcss -o dist/index.css --minify",
+    "preview": "vite preview",
+    "test": "vitest --run --update",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "patch": "npm version --no-git-tag-version patch",
+    "minor": "npm version --no-git-tag-version minor",
+    "major": "npm version --no-git-tag-version major",
+    "release": "npm run build && npm publish --access public",
+    "storybook": "storybook dev -p 6006 --no-open",
+    "build-storybook": "storybook build -o static",
+    "chromatic": "npx chromatic --exit-zero-on-changes"
+  },
+  "homepage": "http://mrksbnc.github.io/bamboo",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrksbnc/bamboo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mrksbnc/bamboo/issues"
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "engines": {
+    "node": ">=20.9.0",
+    "npm": ">=10.1.0"
+  },
+  "publishConfig": {
+    "tag": "latest",
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    },
+    "./index.css": {
+      "import": "./dist/main.css",
+      "require": "./dist/main.css"
+    }
+  },
+  "dependencies": {
+    "vue": "^3.4.21"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.1",
+    "@rushstack/eslint-patch": "^1.7.1",
+    "@storybook/addon-coverage": "^1.0.1",
+    "@storybook/addon-docs": "^8.0.6",
+    "@storybook/addon-essentials": "^8.0.6",
+    "@storybook/addon-interactions": "^8.0.6",
+    "@storybook/addon-links": "^8.0.6",
+    "@storybook/addon-mdx-gfm": "^8.0.6",
+    "@storybook/addon-themes": "^8.0.6",
+    "@storybook/blocks": "^8.0.6",
+    "@storybook/test": "^8.0.6",
+    "@storybook/theming": "^8.0.6",
+    "@storybook/vue3": "^8.0.6",
+    "@storybook/vue3-vite": "^8.0.6",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.11.6",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.18",
+    "chromatic": "^11.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-vue": "^9.20.1",
+    "gh-pages": "^6.1.1",
+    "jsdom": "^24.0.0",
+    "postcss": "^8.4.35",
+    "postcss-nesting": "^12.0.4",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-gfm": "^4.0.0",
+    "sass": "^1.70.0",
+    "storybook": "^8.0.6",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.5",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-dts": "^3.7.2",
+    "vite-svg-loader": "^5.1.0",
+    "vitest": "^1.2.1",
+    "vue-tsc": "^2.0.3"
+  }
 }
