--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "vitest --run --update",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit",
-		"lint": "eslint .",
+		"lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
 		"format": "prettier --write src/",
 		"patch": "npm version --no-git-tag-version patch",
 		"minor": "npm version --no-git-tag-version minor",
@@ -58,7 +58,7 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^1.5.0",
-		"@eslint/js": "^9.5.0",
+		"@rushstack/eslint-patch": "^1.7.1",
 		"@storybook/addon-coverage": "^1.0.4",
 		"@storybook/addon-docs": "^8.1.9",
 		"@storybook/addon-essentials": "^8.1.9",
@@ -70,19 +70,23 @@
 		"@storybook/theming": "^8.1.9",
 		"@storybook/vue3": "^8.1.9",
 		"@storybook/vue3-vite": "^8.1.9",
-		"@tsconfig/node18": "^18.2.2",
+		"@tsconfig/node20": "^20.1.0",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^20.11.6",
 		"@typescript-eslint/parser": "^7.13.0",
 		"@vitejs/plugin-vue": "^5.0.3",
 		"@vitest/coverage-v8": "^1.3.1",
+		"@vue/eslint-config-prettier": "^9.0.0",
+		"@vue/eslint-config-typescript": "^13.0.0",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.5.1",
 		"autoprefixer": "^10.4.18",
 		"chromatic": "^11.0.0",
-		"eslint": "9.x",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-vue": "^9.26.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-storybook": "^0.8.0",
+		"eslint-plugin-vue": "^9.20.1",
 		"gh-pages": "^6.1.1",
 		"globals": "^15.4.0",
 		"jsdom": "^24.0.0",
