--- a/package.json
+++ b/package.json
@@ -54,60 +54,56 @@
 		}
 	},
 	"dependencies": {
-		"vue": "^3.4.21"
+		"vue": "^3.5.13"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^1.5.0",
-		"@rushstack/eslint-patch": "^1.7.1",
+		"@chromatic-com/storybook": "^3.2.2",
+		"@eslint/js": "^9.15.0",
 		"@storybook/addon-coverage": "^1.0.4",
-		"@storybook/addon-docs": "^8.1.9",
-		"@storybook/addon-essentials": "^8.1.9",
-		"@storybook/addon-interactions": "^8.1.9",
-		"@storybook/addon-links": "^8.1.9",
-		"@storybook/addon-themes": "^8.1.9",
-		"@storybook/blocks": "^8.1.9",
-		"@storybook/test": "^8.1.9",
+		"@storybook/addon-docs": "^8.4.5",
+		"@storybook/addon-essentials": "^8.4.5",
+		"@storybook/addon-interactions": "^8.4.5",
+		"@storybook/addon-links": "^8.4.5",
+		"@storybook/addon-themes": "^8.4.5",
+		"@storybook/blocks": "^8.4.5",
+		"@storybook/test": "^8.4.5",
 		"@storybook/theming": "^8.1.9",
 		"@storybook/vue3": "^8.1.9",
 		"@storybook/vue3-vite": "^8.1.9",
 		"@tsconfig/node20": "^20.1.0",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^20.11.6",
-		"@typescript-eslint/parser": "^8.0.1",
 		"@vitejs/plugin-vue": "^5.0.3",
-		"@vitest/coverage-v8": "^1.3.1",
-		"@vue/eslint-config-prettier": "^9.0.0",
-		"@vue/eslint-config-typescript": "^13.0.0",
+		"@vitest/coverage-v8": "^2.1.5",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.5.1",
-		"autoprefixer": "^10.4.18",
+		"autoprefixer": "^10.4.20",
 		"chromatic": "^11.0.0",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-storybook": "^0.8.0",
-		"eslint-plugin-vue": "^9.20.1",
-		"gh-pages": "^6.1.1",
-		"globals": "^15.4.0",
-		"jsdom": "^24.0.0",
-		"postcss": "^8.4.35",
-		"postcss-nesting": "^12.1.5",
-		"prettier": "^3.2.5",
-		"prettier-plugin-organize-imports": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.6.4",
+		"eslint": "^9.15.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-storybook": "^0.11.1",
+		"eslint-plugin-vue": "^9.31.0",
+		"gh-pages": "^6.2.0",
+		"globals": "^15.12.0",
+		"jsdom": "^25.0.1",
+		"postcss": "^8.4.49",
+		"prettier": "3.3.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
-		"sass": "^1.70.0",
-		"storybook": "^8.1.9",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5.3.3",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.1.5",
+		"sass": "^1.81.0",
+		"storybook": "^8.4.5",
+		"tailwindcss": "^3.4.15",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.15.0",
+		"vite": "^5.4.11",
 		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-dts": "^3.7.2",
+		"vite-plugin-dts": "^4.3.0",
 		"vite-svg-loader": "^5.1.0",
-		"vitest": "^1.2.1",
-		"vue-tsc": "^2.0.3"
+		"vitest": "^2.1.5",
+		"vue-tsc": "^2.1.10"
 	}
 }
