--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"lint": "eslint ./src/**/*.{ts,vue} --fix",
 		"release": "npm run build && npm publish --access public",
 		"storybook": "storybook dev -p 6006 --no-open",
-		"test": "vitest --run --update",
+		"test": "vitest --update --coverage",
 		"type-check": "vue-tsc --noEmit"
 	},
 	"dependencies": {
