--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
 		"@storybook/addon-coverage": "^1.0.4",
 		"@storybook/addon-docs": "^8.4.6",
 		"@storybook/addon-essentials": "^8.4.6",
-		"@storybook/addon-interactions": "^8.4.6",
 		"@storybook/addon-links": "^8.4.6",
 		"@storybook/addon-mdx-gfm": "^8.4.6",
 		"@storybook/addon-themes": "^8.4.6",
 		"@storybook/blocks": "^8.4.6",
+		"@storybook/experimental-addon-test": "^8.4.6",
 		"@storybook/manager-api": "^8.4.6",
 		"@storybook/test": "^8.4.6",
 		"@storybook/theming": "^8.4.6",
@@ -62,6 +62,7 @@
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^22.10.1",
 		"@vitejs/plugin-vue": "^5.2.1",
+		"@vitest/browser": "^2.1.6",
 		"@vitest/coverage-v8": "^2.1.6",
 		"@vue/eslint-config-typescript": "^14.1.4",
 		"@vue/test-utils": "^2.4.1",
@@ -76,6 +77,7 @@
 		"gh-pages": "^6.2.0",
 		"globals": "^15.12.0",
 		"jsdom": "^25.0.1",
+		"playwright": "^1.49.0",
 		"postcss": "^8.4.49",
 		"prettier": "^3.4.1",
 		"prettier-plugin-organize-imports": "^4.1.0",
