--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,11 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+	"include": [
+		"src/**/*.ts",
+		"src/**/*.tsx",
+		"src/**/*.vue",
+		".storybook/**/*.ts"
+	],
 	"exclude": ["node_modules", "dist", "docs"]
 }
