--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,5 +20,10 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true
 	},
-	"include": ["vite.config.ts", "vitest.config.ts"]
+	"include": [
+		"vite.config.ts",
+		"vitest.config.ts",
+		"vitest.workspace.ts",
+		"vitest.setup.ts"
+	]
 }
