--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@storybook/theming": "^8.4.7",
 		"@storybook/vue3": "^8.4.7",
 		"@storybook/vue3-vite": "^8.4.7",
+		"@tailwindcss/vite": "4.0.0-beta.8",
 		"@tsconfig/node20": "^20.1.4",
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.10.2",
@@ -87,10 +88,10 @@
 		"remark-gfm": "^4.0.0",
 		"sass": "^1.83.0",
 		"storybook": "^8.4.7",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "4.0.0-beta.8",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.18.2",
-		"vite": "^6.0.6",
+		"vite": "^6.0.5",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-dts": "^4.4.0",
 		"vite-svg-loader": "^5.1.0",
