--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/test": "^8.4.7",
     "@storybook/vue3": "^8.4.7",
     "@storybook/vue3-vite": "^8.4.7",
+    "@tailwindcss/postcss": "^4.0.0-beta.8",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
@@ -77,7 +78,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "storybook": "^8.4.7",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0-beta.8",
     "typescript": "~5.7.2",
     "vite": "^6.0.6",
     "vite-plugin-dts": "^4.4.0",
