--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.11",
     "@chromatic-com/storybook": "^3.2.3",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
