--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.15.4",
+    "playwright": "^1.49.1",
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
