--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "build": "NODE_ENV=production run-p type-check \"build-only {@}\" && npm run build:css:min",
     "build:storybook": "storybook build -o static",
     "build:css:min": "NPM_ENV=production npx postcss src/lib.css > dist/lib.min.css",
-    "build:css": "NPM_ENV=development npx postcss src/lib.css > dist/lib.css"
+    "build:css": "NPM_ENV=development npx postcss src/lib.css > dist/lib.css",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "eslintConfig": {
     "extends": [
@@ -86,6 +89,7 @@
     "vite-plugin-dts": "^4.4.0",
     "vite-plugin-vue-devtools": "^7.6.8",
     "vite-svg-loader": "^5.1.0",
+    "vitepress": "^1.5.0",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.2.0"
   }
