--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/vue3": "^8.4.7",
     "@storybook/vue3-vite": "^8.4.7",
     "@tailwindcss/postcss": "^4.0.0-beta.8",
+    "@tailwindcss/vite": "^4.0.0-beta.9",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.5",
@@ -82,7 +83,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "storybook": "^8.4.7",
-    "tailwindcss": "^4.0.0-beta.8",
+    "tailwindcss": "^4.0.0-beta.9",
     "typescript": "~5.7.2",
     "vite": "^6.0.7",
     "vite-plugin-dts": "^4.4.0",
