--- a/package.json
+++ b/package.json
@@ -45,52 +45,52 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@storybook/vue3": "^8.4.7",
-    "@storybook/vue3-vite": "^8.4.7",
-    "@tailwindcss/postcss": "^4.0.0-beta.8",
-    "@tailwindcss/vite": "^4.0.0-beta.9",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.5.4",
+    "@storybook/addon-interactions": "^8.5.4",
+    "@storybook/addon-onboarding": "^8.5.4",
+    "@storybook/blocks": "^8.5.4",
+    "@storybook/test": "^8.5.4",
+    "@storybook/vue3": "^8.5.4",
+    "@storybook/vue3-vite": "^8.5.4",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.6",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "2.1.8",
-    "@vitest/eslint-plugin": "1.1.22",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/eslint-plugin": "^1.1.28",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
-    "chromatic": "^11.20.2",
-    "eslint": "^9.17.0",
-    "eslint-plugin-oxlint": "^0.15.5",
+    "chromatic": "^11.25.2",
+    "eslint": "^9.20.1",
+    "eslint-plugin-oxlint": "^0.15.10",
     "eslint-plugin-storybook": "^0.11.1",
     "eslint-plugin-vue": "^9.32.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
-    "playwright": "^1.49.1",
-    "oxlint": "^0.15.5",
-    "postcss": "^8.4.49",
+    "oxlint": "^0.15.10",
+    "playwright": "^1.50.1",
+    "postcss": "^8.5.2",
     "postcss-cli": "^11.0.0",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.3",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.0",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "storybook": "^8.4.7",
-    "tailwindcss": "^4.0.0-beta.9",
-    "typescript": "~5.7.2",
-    "vite": "^6.0.7",
-    "vite-plugin-dts": "^4.4.0",
-    "vite-plugin-vue-devtools": "^7.6.8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "storybook": "^8.5.4",
+    "tailwindcss": "^4.0.6",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
+    "vite-plugin-dts": "^4.5.0",
+    "vite-plugin-vue-devtools": "^7.7.1",
     "vite-svg-loader": "^5.1.0",
-    "vitepress": "^1.5.0",
-    "vitest": "^2.1.8",
+    "vitepress": "^1.6.3",
+    "vitest": "^3.0.5",
     "vue-tsc": "^2.2.0"
   }
 }
