--- a/package.json
+++ b/package.json
@@ -1,96 +1,96 @@
 {
-  "name": "@mrksbnc/bamboo",
-  "version": "0.0.0-beta.6",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/bamboo.js",
-      "require": "./dist/bamboo.umd.cjs"
-    },
-    "./lib.css": {
-      "import": "./dist/lib.min.css",
-      "require": "./dist/lib.min.css"
-    }
-  },
-  "main": "./dist/bamboo.umd.cjs",
-  "module": "./dist/bamboo.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist/**/*"
-  ],
-  "scripts": {
-    "chromatic": "npx chromatic --exit-zero-on-changes",
-    "test": "vitest --update --coverage --silent=false",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*",
-    "format": "prettier --write src/",
-    "storybook": "storybook dev -p 6006 --no-open",
-    "build": "NODE_ENV=production run-p type-check \"build-only {@}\" && npm run build:css:min",
-    "build:storybook": "storybook build -o static",
-    "build:css:min": "NPM_ENV=production npx postcss src/lib.css > dist/lib.min.css",
-    "build:css": "NPM_ENV=development npx postcss src/lib.css > dist/lib.css",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
-  },
-  "dependencies": {
-    "vue": "^3.5.13"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-essentials": "^8.5.4",
-    "@storybook/addon-interactions": "^8.5.4",
-    "@storybook/addon-onboarding": "^8.5.4",
-    "@storybook/blocks": "^8.5.4",
-    "@storybook/test": "^8.5.4",
-    "@storybook/vue3": "^8.5.4",
-    "@storybook/vue3-vite": "^8.5.4",
-    "@tailwindcss/postcss": "^4.0.6",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tsconfig/node22": "^22.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.1",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "^3.0.5",
-    "@vitest/eslint-plugin": "^1.1.28",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.4.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
-    "chromatic": "^11.25.2",
-    "eslint": "^9.20.1",
-    "eslint-plugin-oxlint": "^0.15.10",
-    "eslint-plugin-storybook": "^0.11.1",
-    "eslint-plugin-vue": "^9.32.0",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.15.10",
-    "playwright": "^1.50.1",
-    "postcss": "^8.5.2",
-    "postcss-cli": "^11.0.0",
-    "postcss-loader": "^8.1.1",
-    "postcss-preset-env": "^10.1.3",
-    "prettier": "^3.5.0",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "^8.5.4",
-    "tailwindcss": "^4.0.6",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.0",
-    "vite-plugin-dts": "^4.5.0",
-    "vite-plugin-vue-devtools": "^7.7.1",
-    "vite-svg-loader": "^5.1.0",
-    "vitepress": "^1.6.3",
-    "vitest": "^3.0.5",
-    "vue-tsc": "^2.2.0"
-  }
+	"name": "@mrksbnc/bamboo",
+	"version": "0.0.0-beta.6",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./dist/bamboo.js",
+			"require": "./dist/bamboo.umd.cjs"
+		},
+		"./lib.css": {
+			"import": "./dist/lib.min.css",
+			"require": "./dist/lib.min.css"
+		}
+	},
+	"main": "./dist/bamboo.umd.cjs",
+	"module": "./dist/bamboo.js",
+	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"scripts": {
+		"chromatic": "npx chromatic --exit-zero-on-changes",
+		"test": "vitest --update --coverage --silent=false",
+		"build-only": "vite build",
+		"type-check": "vue-tsc --build",
+		"lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+		"lint:eslint": "eslint . --fix",
+		"lint": "run-s lint:*",
+		"format": "prettier --write src/",
+		"storybook": "storybook dev -p 6006 --no-open",
+		"build": "NODE_ENV=production run-p type-check \"build-only {@}\" && npm run build:css:min",
+		"build:storybook": "storybook build -o static",
+		"build:css:min": "NPM_ENV=production npx postcss src/lib.css > dist/lib.min.css",
+		"build:css": "NPM_ENV=development npx postcss src/lib.css > dist/lib.css",
+		"docs:dev": "vitepress dev docs",
+		"docs:build": "vitepress build docs",
+		"docs:preview": "vitepress preview docs"
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:storybook/recommended"
+		]
+	},
+	"dependencies": {
+		"vue": "^3.5.13"
+	},
+	"devDependencies": {
+		"@chromatic-com/storybook": "^3.2.4",
+		"@storybook/addon-essentials": "^8.5.6",
+		"@storybook/addon-interactions": "^8.5.6",
+		"@storybook/addon-onboarding": "^8.5.6",
+		"@storybook/blocks": "^8.5.6",
+		"@storybook/test": "^8.5.6",
+		"@storybook/vue3": "^8.5.6",
+		"@storybook/vue3-vite": "^8.5.6",
+		"@tailwindcss/postcss": "^4.0.6",
+		"@tailwindcss/vite": "^4.0.6",
+		"@tsconfig/node22": "^22.0.0",
+		"@types/jsdom": "^21.1.7",
+		"@types/node": "^22.13.4",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"@vitest/coverage-v8": "^3.0.5",
+		"@vitest/eslint-plugin": "^1.1.31",
+		"@vue/eslint-config-prettier": "^10.2.0",
+		"@vue/eslint-config-typescript": "^14.4.0",
+		"@vue/test-utils": "^2.4.6",
+		"@vue/tsconfig": "^0.7.0",
+		"autoprefixer": "^10.4.20",
+		"chromatic": "^11.25.2",
+		"eslint": "^9.20.1",
+		"eslint-plugin-oxlint": "^0.15.11",
+		"eslint-plugin-storybook": "^0.11.3",
+		"eslint-plugin-vue": "^9.32.0",
+		"jsdom": "^26.0.0",
+		"npm-run-all2": "^7.0.2",
+		"oxlint": "^0.15.11",
+		"playwright": "^1.50.1",
+		"postcss": "^8.5.2",
+		"postcss-cli": "^11.0.0",
+		"postcss-loader": "^8.1.1",
+		"postcss-preset-env": "^10.1.4",
+		"prettier": "^3.5.1",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"storybook": "^8.5.6",
+		"tailwindcss": "^4.0.6",
+		"typescript": "^5.7.3",
+		"vite": "^6.1.0",
+		"vite-plugin-dts": "^4.5.0",
+		"vite-plugin-vue-devtools": "^7.7.2",
+		"vite-svg-loader": "^5.1.0",
+		"vitepress": "^1.6.3",
+		"vitest": "^3.0.5",
+		"vue-tsc": "^2.2.2"
+	}
 }
