--- a/.github/workflows/code-quality-docs.yaml
+++ b/.github/workflows/code-quality-docs.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pnpm install
+          pnpm install --frozen-lockfile
 
       - name: Run docs build
         run: |
