--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,20 @@
-name: 'release'
+name: release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
-permissions:
-  contents: write
-  packages: write
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
+    name: Release
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    permissions:
+      contents: write
+      pull-requests: write
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -20,69 +22,20 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
 
-      - name: Setup LTS Node.js
+      - name: Setup Node
         uses: actions/setup-node@v6
         with:
           node-version: 'lts/*'
           cache: pnpm
           registry-url: 'https://npm.pkg.github.com'
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
 
-      - name: Run tests
-        run: pnpm test
-
-      - name: Run linting
-        run: pnpm lint
-
-      - name: Run type check
-        run: pnpm type-check
-
-      - name: Build package
-        run: pnpm build
-
-      - name: Extract tag version
-        id: tag
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Update package version
-        run: |
-          pnpm version ${{ steps.tag.outputs.version }} --no-git-tag-version
-
-      - name: Determine npm tag
-        id: npm-tag
-        run: |
-          if [[ "${{ steps.tag.outputs.version }}" =~ (alpha|beta|rc) ]]; then
-            echo "tag=next" >> $GITHUB_OUTPUT
-          else
-            echo "tag=latest" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Publish to GitHub Packages
-        run: pnpm publish --no-git-checks --tag ${{ steps.npm-tag.outputs.tag }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+      - name: Create Release Pull Request or Publish
+        uses: changesets/action@v1
         with:
-          name: Release ${{ steps.tag.outputs.version }}
-          body: |
-            ## Changes in ${{ steps.tag.outputs.version }}
-
-            This release was automatically generated from tag `${{ github.ref_name }}`.
-
-            ### Package Information
-            - **Package**: `@mrksbnc/bamboo@${{ steps.tag.outputs.version }}`
-            - **Registry**: GitHub Packages
-
-            ### Installation
-            ```bash
-            npm install @mrksbnc/bamboo@${{ steps.tag.outputs.version }}
-            ```
-
-            For more details, see the [CHANGELOG](./CHANGELOG.md) or check the commits since the last release.
-          draft: false
-          prerelease: ${{ contains(steps.tag.outputs.version, 'alpha') || contains(steps.tag.outputs.version, 'beta') || contains(steps.tag.outputs.version, 'rc') }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          publish: pnpm changeset publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
