--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
 	"name": "@mrksbnc/bamboo",
-	"version": "0.0.1-alpha.1",
+	"version": "0.0.1",
 	"type": "module",
 	"exports": {
 		"./components": {
 			"types": "./dist/components/index.d.ts",
+			"require": "./dist/components.cjs",
 			"import": "./dist/components.js"
 		},
 		"./core": {
 			"types": "./dist/core/index.d.ts",
+			"require": "./dist/core.cjs",
 			"import": "./dist/core.js"
-		},
-		"./services": {
-			"types": "./dist/services/index.d.ts",
-			"import": "./dist/services.js"
 		},
 		"./lib.css": {
 			"import": "./dist/lib.css",
@@ -47,6 +45,7 @@
 		"vue": "^3.5.25"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.29.8",
 		"@cspell/dict-vue": "^3.0.5",
 		"@prettier/plugin-oxc": "^0.1.3",
 		"@tsconfig/node22": "^22.0.5",
