--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,6 +1,16 @@
 {
 	"$schema": "./node_modules/oxlint/configuration_schema.json",
-	"plugins": ["unicorn", "typescript", "oxc", "vue"],
+	"plugins": [
+		"eslint",
+		"import",
+		"jsdoc",
+		"jsx-a11y",
+		"oxc",
+		"typescript",
+		"unicorn",
+		"vitest",
+		"vue"
+	],
 	"categories": {
 		"correctness": "error",
 		"suspicious": "warn",
